yoshimi 2.3.0 rc3

2023-5-11 Will
bn 2225
Found some missing envelope settings :(
Finalised Envelope pointer colours.
Changed some LFO controls to floats and new combi storage.
Knobs show correct colours when loading instruments.
Changed slider large step range for higher resolution.
Changed Resonance sliders to floats and new combi storage.
Improved formant filter centre frequency and octave stepping.
Updated docs and guides.

2023-5-9 Will
bn 2224
BugFix: Sliders not returning to default on right mouse click
    directly over the peg.
Added greyscale tint to themes.
Adjusted knob and slider colours for better contrast.
Changed some filter controls to floats and new combi storage.
Knobs show correct colours when loading instruments.
Merged in envelope adjustments from Hermann.

2023-5-7 Will
bn 2223
Added missing right click action for formant freq dial.
Added hidden totally grey colourmap (min & max greyscale as 127)
Removed confusing theme (non) error messages.
Updated CLI info.
Updated docs (incuding User Guide).
updated metainfo files.
Added Ride Crash and Soft Shaker to Drums bank.
Set version as 2.3.0 rc1

2023-5-4 Will
bn 2222
All effects show correct defaults for all presets and set
appropriate colours - completes all knobs/sliders.

2023-5-2 Will
bn 2221
BugFix: GUI not updating when part loaded betweeen 16 and 25

2023-4-30 Will
bn 2220
Added export feature to theme control.
Updated docs.
bn 2219
Defined formant frequency psuedo default for individual formants
    the first time they are set - saved with the instrument.
bn 2218
Updates to user manual

2023-4-29 Will
bn 2217
Theme colours now fixed and order rationalised.
Extra reserved entries added.

2023-4-28 Will
bn 2216
Changed freemode from light button to check button.
Changed postions of Resonance C, P, Close, Apply.
Changed colour of 'Close' buttons.
Removed 'save and close' from presets window
    preset dirs are not part of config.
Updated User Guide

2023-4-26 Will
bn 2215