@@ -22,7 +22,7 @@
     You can have a <b>Kit</b> of up to 16 of these triple engine synthesisers with various overlapping key ranges. These enable you to create complex multi-layered sounds or small drum kits.
     </p>
     <p>
-    This complete <b>Instrument</b> patch is then optionally passed through up to three effects such as <b>Reverb</b>, <b>Phaser</b> and <b>Equalisation</b>. From here output from this <b>Part</b> is given a number and assigned to an individual MIDI input channel, overall key range, Continuous Controller (CC) sensitivities and degree of polyphony.
+    This complete <b>Instrument</b> patch is then optionally passed through up to three effects such as <b>Reverb</b>, <b>Phaser</b> and <b>Equalisation</b>. From here output of this <b>Part</b> is given a number and assigned to an individual MIDI input channel, overall key range, Continuous Controller (CC) sensitivities and degree of polyphony.
     </p>
     <p>
     Parts, can have further <b>Insertion</b> effects applied to them before being directed to either the main audio output, an individual output (if such is available), or both! The main output can have <b>System</b> effects combined from all active parts.
