@@ -45,14 +45,14 @@
     </p>
     <img src="images/defaults.png" alt="Default control settings" class="small">
     <p>
-    In current Yoshimi versions all sliders indicate that they are at the default position when the 'peg' has a green center, otherwise it will be red. Similarly most rotary knobs have black pointer line when at the default, and red when moved.<br>
+    In current Yoshimi versions all sliders indicate that they are at the default position when the 'peg' has a green center, otherwise it will be red. Similarly, rotary knobs have a black pointer line when at the default, and red when moved.<br>
     Almost all of these controls have dynamic tooltips showing you what the current setting is. Also the default settings have been very carefully thought out - especially the ones deep in the synth <em>engines</em> so just enabling features can produce dramatic results.
     </p>
     <img src="../images/boundry.png" alt="divider" class="wideline">
     <p>
     Another enhancement is that we make a clear distinction between link buttons and action buttons.
     <br><br>
-     <b>Link</b> buttons are rectangular and pale green. They don't <em>change</em> any settings, just take to to another window where there is usually an expanded group of controls.
+     <b>Link</b> buttons are rectangular and pale green. They don't <em>change</em> any settings, just take you to another window where there is usually an expanded group of controls.
      <br><br>
      <b>Action</b> buttons are rounded and pale blue. These are the ones that make immediate changes such as enabling a synth engine.
      <br><br>
